--- a/index.html
+++ b/index.html
@@ -26,6 +26,21 @@
     <div class="boarder">
     <a class="navbar-brand" href="index.html">Anthony R. Spyker</a>
     </div>
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <div class="social">
+        <a class="navbar-brand" href="https://github.com/AnthonyRSpyker">
+          <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" width="30" height="30" alt="" loading="lazy">
+        </a>
+        <a class="navbar-brand" href="#">
+          <img src="https://i.insider.com/57333f71dd089577098b46bc?width=1100&format=jpeg&auto=webp" width="auto" height="30" alt="" loading="lazy">
+        </a>
+        <a class="navbar-brand" href="#">
+          <img src="https://pbs.twimg.com/profile_images/1082424539492073477/exU8rYn8_400x400.jpg" width="auto" height="30" alt="" loading="lazy">
+        </a>
+        </div>
+      </div>
+    </div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -73,4 +88,7 @@
 <footer>
     
 </footer>
+    </div>
+  </div>
+</div>
 </html>
