indx.html was fixed so the about me section is better

--- a/index.html
+++ b/index.html
@@ -57,28 +57,36 @@
           </ul>
         </div>
   </nav>
-  </div> 
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6">
+  
   <article>
    
-    <div class="Header">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">About me</div>
-      </div>
-    </div>
-    </div>
+    <section class="aboutme">
+      <div class="container">
+        <div class="row">
+         <div class="col-md-12">About me</div>
+        </div>
+     </div>
+    </section>
     
+    <section>
     <div class="container">
         <div class="row">
-          <div class="col-md-12"></div>
-          <div class="imagetext">
+          <div class="col-md-12">
           <img class="imagewrap" src="./project_images/Photo on 11-18-20 at 10.28 AM.JPG">
-          <p>This is inline text</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Orci sagittis eu volutpat odio. Augue interdum velit euismod in pellentesque massa placerat. Purus faucibus ornare suspendisse sed nisi lacus sed viverra tellus. Massa eget egestas purus viverra accumsan in nisl. Lorem mollis aliquam ut porttitor. Porttitor rhoncus dolor purus non enim. In eu mi bibendum neque egestas congue quisque egestas. Diam donec adipiscing tristique risus nec feugiat in fermentum. Vitae tempus quam pellentesque nec nam. Imperdiet nulla malesuada pellentesque elit eget gravida. Cursus metus aliquam eleifend mi in nulla posuere. Mi proin sed libero enim sed. Vitae tortor condimentum lacinia quis vel eros donec. Phasellus faucibus scelerisque eleifend donec pretium vulputate. At quis risus sed vulputate odio ut enim blandit volutpat.</p>
           </div>
         </div>
-    </div>
+    </section>
     
   </article>
+      </div>
+    </div>
+  </div>
 
   
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
