fixed up portfolio.html to align images and title. Cleaned up index.html and style.css.

--- a/index.html
+++ b/index.html
@@ -28,17 +28,14 @@
         <a class="navbar-brand" href="#">
           <img src="https://i.insider.com/57333f71dd089577098b46bc?width=1100&format=jpeg&auto=webp" width="auto" height="30" alt="" loading="lazy">
         </a>
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="https://linkedin.com/in/anthony-spyker-51178b82">
           <img src="https://pbs.twimg.com/profile_images/1082424539492073477/exU8rYn8_400x400.jpg" width="auto" height="30" alt="" loading="lazy">
         </a>
         </div>
       </div>
     </div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+        
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
